# Python_for_Data_Science

./: README.md
Python_0_Starting/ex00/: Hello.py
Python_0_Starting/ex01/: format_ft_time.py
Python_0_Starting/ex02/: find_ft_type.py
Python_0_Starting/ex03/: NULL_not_found.py  tester.py
Python_0_Starting/ex04/: whatis.py
Python_0_Starting/ex05/: building.py
Python_0_Starting/ex06/: filterstring.py  ft_filter.py
Python_0_Starting/ex07/: sos.py
Python_0_Starting/ex08/: Loading.py
Python_0_Starting/ex09/: pyproject.toml  test.py
Python_0_Starting/ex09/ft_package/: __init__.py  ft_package.py  module1.py  module2.py
Python_0_Starting/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Python_0_Starting/python0_submitted/ex09/: pyproject.toml  test.py
Python_0_Starting/python0_submitted/ex09/ft_package/: ft_package.py
Python_1_Array/ex00/: give_bmi.py  tester.py
Python_1_Array/ex01/: array2D.py  tester.py
Python_1_Array/ex02/: tester.py
Python_1_Array/ex03/: load_image.py  zoom.py
Python_1_Array/ex04/: rotate.py  zoom.py
Python_1_Array/ex05/: load_image.py  pimp_image.py  tester.py
Python_2_DataTable/ex00/: load_csv.py  tester.py
Python_2_DataTable/ex01/: aff_life.py  load_csv.py  matplotlib_test.py
Python_2_DataTable/ex02/: aff_pop.py
Python_2_DataTable/ex03/: projection_life.py
Python_3_OOP/ex00/: tester.py
Python_3_OOP/ex01/: S1E7.py  S1E9.py  tester.py
Python_3_OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py  tester.py
Python_3_OOP/ex03/: ft_calculator.py  tester.py
Python_3_OOP/ex04/: ft_calculator.py  tester.py
Python_4_DOD/ex00/: statistics.py  tester.py
Python_4_DOD/ex01/: in_out.py  tester.py
(+13 files in other folders)
