[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package" 
version = "0.0.1"  
description = "A sample test package"
license = { text = "MIT" }
authors = [
    {name = "tlukanie", email = "tlukanie@student.42prague.com"}
]
dependencies = []


[project.urls]
homepage = "https://github.com/tlukanie/ft_package"
repository = "https://github.com/tlukanie/ft_package"

