[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package" 
version = "0.0.1"  
description = "A sample test package"
license = { text = "MIT" }

dependencies = []
authors = [
    { name = "tlukanie", email = "tlukanie@student.42prague.com" }
]

[project.urls]
homepage = "https://github.com/tlukanie/ft_package"
repository = "https://github.com/tlukanie/ft_package"

